--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@
 PORT=8080
 
 # MongoDB string URI mongodb://[username:password@]host1[:port1][,...hostN[:portN]][/[defaultauthdb][?options]]
-# DB_URL=mongodb://mongo:27017/test
-DB_URL=mongodb://localhost:27017/webhook
+DB_URL=mongodb://mongo:27017/test
+# DB_URL=mongodb://localhost:27017/webhook
 
 # Secret
-SECRET=XdQFUPn6Q7Du2GbAZSQLzj8QAMGG4yuM
+SECRET=Change_me!!
