--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   },
   "homepage": "https://github.com/oscarGtz86/meraki-webhook#readme",
   "dependencies": {
+    "compression": "^1.7.4",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
     "hbs": "^4.2.0",
+    "helmet": "^5.0.2",
     "mongoose": "^6.2.9",
     "morgan": "^1.10.0"
   },
