--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,10 @@
-# Config file
+# Change file name to .env
 
 # Server port
 PORT=8080
 
 # MongoDB string URI mongodb://[username:password@]host1[:port1][,...hostN[:portN]][/[defaultauthdb][?options]]
 DB_URL=mongodb://mongo:27017/test
-# DB_URL=mongodb://localhost:27017/webhook
 
 # JWT Secret
 SECRET=Change_me!!
