--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "hbs": "^4.2.0",
     "helmet": "^5.0.2",
     "mongoose": "^6.2.9",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "winston": "^3.7.2",
+    "winston-daily-rotate-file": "^4.6.1"
   },
   "devDependencies": {
     "eslint": "^8.12.0"
