--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     image: mongo
     ports:
       - "27017:27017"
+    volumes:
+      - $PWD/data:/data/db
     # restart: always
     # environment:
     #   MONGO_INITDB_ROOT_USERNAME: root
@@ -15,5 +17,9 @@ services:
     build: .
     ports:
       - "8080:8080"
+    environment:
+      - NODE_ENV=$NODE_ENV
     depends_on:
       - mongo
+    volumes:
+      - $PWD/logs:/home/node/logs
