--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Cisco Meraki Webhook Server",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node app.js"
   },
   "repository": {
@@ -35,6 +35,7 @@
     "winston-daily-rotate-file": "^4.6.1"
   },
   "devDependencies": {
-    "eslint": "^8.12.0"
+    "eslint": "^8.12.0",
+    "mockingoose": "^2.15.2"
   }
 }
